@@ -32,7 +32,10 @@ subprojects {
         environment["JEED_USE_CACHE"] = "true"
         jvmArgs(
             "-ea", "--enable-preview", "-Dfile.encoding=UTF-8", "-Djava.security.manager=allow",
-            "-XX:+UseZGC", "-XX:ZCollectionInterval=8", "-XX:-OmitStackTraceInFastThrow",
+            "-XX:+UseZGC", "-XX:+ZGenerational", "-XX:-OmitStackTraceInFastThrow",
+            "-XX:+UnlockExperimentalVMOptions", "-XX:-VMContinuations",
+            "-Xmx512M",
+            "-XX:ReservedCodeCacheSize=8M", "-XX:+PrintCodeCache",
             "--add-opens", "java.base/java.lang=ALL-UNNAMED",
             "--add-opens", "java.base/java.util=ALL-UNNAMED",
             "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
